--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="container">
         <div class="image">
-            <img src="imagem-de-pablo-marcal-fungando.jpg" alt="Pablo Marçal Fungando" style="width:100%;">
+            <img src="nrz.png" alt="Pablo Marçal Fungando" style="width:100%;">
         </div>
 
         <div class="description">
