--- a/index.html
+++ b/index.html
@@ -76,19 +76,24 @@
 
         <div class="links">
             <h2>Links para Comprar SniffCoin</h2>
-            <a href="https://exchange-crypto-link.com">Comprar SniffCoin</a>
+            <a href="https://pump.fun/DKthuZobaRUCvsrs6Ggnw2m8ytWSrHEq77HdCnEMpump">Comprar Pablo SniffCoin</a>
+        </div>
+
+        <div class="links">
+            <h2>Rede Solscan</h2>
+            <a href="https://solscan.io/token/DKthuZobaRUCvsrs6Ggnw2m8ytWSrHEq77HdCnEMpump">Rede Solscan</a>
         </div>
 
         <div class="social-icons">
             <h2>Siga-nos nas Redes Sociais</h2>
             <a href="https://x.com/pablosniffcoin" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_X.svg/240px-Logo_of_X.svg.png" alt="Twitter">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/X_logo.jpg/240px-X_logo.jpg" alt="X">
             </a>
             <a href="https://t.me/+9X6WQzkIIPZhODAx" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/120px-Telegram_2019_Logo.svg.png" alt="Telegram">
             </a>
             <a href="https://facebook.com/pablosniffcoin" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%282019%29.svg/120px-Facebook_logo_%282019%29.svg.png" alt="Facebook">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/240px-Facebook_logo_%28square%29.png" alt="Facebook">
             </a>
             <a href="https://instagram.com/pablosniffcoin" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/120px-Instagram_icon.png" alt="Instagram">
