--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/120px-Instagram_icon.png" alt="Instagram">
             </a>
             <a href="https://tiktok.com/@pablosniffcoin" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/TikTok_logo.svg/120px-TikTok_logo.svg.png" alt="TikTok">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Ionicons_logo-tiktok.svg/240px-Ionicons_logo-tiktok.svg.png" alt="TikTok">
             </a>
         </div>
 
